services/petclinic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
  labels:
    app: petclinic
  name: petclinic-ing
spec:
  ingressClassName: traefik
  rules:
  - host: pet.192.168.56.101.sslip.io
    http:
      paths:
      - backend:
          service:
            name: petclinic-svc
            port:
              number: 8080
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - pet.192.168.56.101.sslip.io
    secretName: tls-rancher-ingress
status:
  loadBalancer:
    ingress:
    - ip: 192.168.56.101
